- basic jwt routes, need refactoring
