# internal/DTO/requests.go
@@ -25,3 +25,12 @@ type SignUpRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type SignInRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type TokenRefreshRequest struct {
+	RefreshToken string `json:"refresh_token"`
+}
